[package]
name = "pico-usb"
version = "0.1.0"
authors = ["Dominik Boehi <dominik.boehi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rp2040-pac = { version = "*", git = "https://github.com/rp-rs/rp2040-pac", branch = "main", features = ["rt"] }
rp2040-boot2 = { version = "*", git = "https://github.com/rp-rs/rp2040-boot2-rs.git", branch = "main"}
cortex-m = "0.7"
cortex-m-rt = "0.6.13"
panic-halt = "0.2.0"
usb-device = { version = "*", git = "https://github.com/Disasm/usb-device.git" }

vcell = "0.1.2"

[patch."https://github.com/rp-rs/rp2040-pac"]
rp2040-pac = { version = "*", git = "https://github.com/Tiwalun/rp2040-pac", branch = "usb-buff-status-writable"}


[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
